# voting-v2

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  rust-toolchain.toml  test.json
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/: events.rs  lib.rs
contracts/secret_contract/: .gitignore  Cargo.toml  Makefile  README.md
contracts/secret_contract/node/: deploy.js  get_keys.js
contracts/secret_contract/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/voting_contract/: Cargo.toml  README.md
contracts/voting_contract/src/: consts.rs  crypto.rs  lib.rs  storage.rs  test_utils.rs  types.rs  views.rs
contracts/voting_snapshot/: Cargo.toml  README.md
contracts/voting_snapshot/src/: admin.rs  consts.rs  events.rs  ext.rs  lib.rs  storage.rs  test_utils.rs  tests.rs  types.rs  view.rs
contracts/voting_snapshot/tests/: integration.rs
db_loader/: index.sql  load.py  table.sql
relayer/: README.md  package-lock.json  package.json  testExample.ts
relayer/src/: index.ts
relayer/src/api/: app.ts  routes.ts
relayer/src/api/config/: cors.config.ts
relayer/src/api/controllers/: decryption.ts  submitVote.ts
relayer/src/api/utils/: near.ts  secret.ts
relayer/src/cryptography/: index.ts  types.ts
relayer/src/cryptography/__tests__/: encrypt_decrypt.ts  signature_verify.ts  tests.ts
relayer/src/utils/: vote.ts
snapshotter/: README.md  loadSnapshot.js  prepareSnapshot.js  stake.js  verify_stake.js  verify_users.py
snapshotter/db_loader/: load.py
snapshotter/server/: README.md  index.js  package-lock.json  package.json
snapshotter/server/api/: app.js  routes.js  snapshot.js
snapshotter/sql/: active_month_per_signer.sql  distinct_stakers.sql  indexes.sql  pool_contracts.sql  user_activity.sql
