[workspace]
members = ["contracts/voting_snapshot"]
resolver = "2"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace.package]
authors = ["Near NDC"]
edition = "2021"
version = "0.1.0"
repository = "https://github.com/near-ndc/voting-v2"
license = "Mozilla Public License 2.0"

[workspace.dependencies]
near-sdk = "5.0.0"
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
num-integer = "0.1"
borsh = "1.0"
serde = "1.0"
