[package]
name = "secret_contract"
description = "Stores secret phrase for encryption"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true, features = ["stargate", "ibc3"] }
cosmwasm-storage.workspace = true
secret-toolkit-storage.workspace = true
cosmwasm-schema.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

# crypto 
secp256k1.workspace = true
