[package]
name = "voting_contract"
description = "The private voting contract for NDC"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true, features = ["legacy"] }
common-contracts.workspace = true
serde_bytes.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
