[package]
name = "voting_snapshot"
description = "Allows user to register to participate in the voting. Stores voting power of each individual user"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true, features = ["unstable"] }
borsh.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
near-workspaces = { workspace = true, features = ["unstable"] }
tokio = { workspace = true, features = ["full"] }
serde_json.workspace = true
borsh = { workspace = true }
anyhow.workspace = true
